force-app/main/default/objects/Checklist_Section__c/Checklist_Section__c.object-meta.xml
<CustomObject>
    <label>Checklist Section</label>
    <nameField>
        <label>Checklist Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>