force-app/main/default/objects/Checklist_Section__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist</label>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Checklist Sections</relationshipLabel>
    <relationshipName>Checklist_Section</relationshipName>
    <type>Lookup</type>
</CustomField>