force-app/main/default/objects/Checklist_Section__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>standard:account</fullName>
            </value>
            <value>
                <fullName>standard:question_feed</fullName>
            </value>
            <value>
                <fullName>standard:poll</fullName>
            </value>
            <value>
                <fullName>action:question_post_action</fullName>
            </value>
            <value>
                <fullName>standard:display_text</fullName>
            </value>
            <value>
                <fullName>standard:home</fullName>
            </value>
            <value>
                <fullName>standard:record_consent</fullName>
            </value>
            <value>
                <fullName>standard:task</fullName>
            </value>
            <value>
                <fullName>standard:product_transfer_state</fullName>
            </value>
            <value>
                <fullName>standard:assignment</fullName>
            </value>
            <value>
                <fullName>standard:customers</fullName>
            </value>
            <value>
                <fullName>standard:bundle_policy</fullName>
            </value>
            <value>
                <fullName>standard:entitlement_policy</fullName>
            </value>
            <value>
                <fullName>standard:document_preview</fullName>
            </value>
            <value>
                <fullName>standard:product_request</fullName>
            </value>
            <value>
                <fullName>standard:location</fullName>
            </value>
            <value>
                <fullName>standard:entity</fullName>
            </value>
            <value>
                <fullName>utility:money</fullName>
            </value>
            <value>
                <fullName>standard:sales_value</fullName>
            </value>
            <value>
                <fullName>standard:entitlement</fullName>
            </value>
            <value>
                <fullName>standard:campaign</fullName>
            </value>
            <value>
                <fullName>standard:data_graph</fullName>
            </value>
            <value>
                <fullName>standard:related_list</fullName>
            </value>
            <value>
                <fullName>standard:attach</fullName>
            </value>
            <value>
                <fullName>standard:impact_strategy_assignment</fullName>
            </value>
            <value>
                <fullName>standard:datashares</fullName>
            </value>
            <value>
                <fullName>standard:folder</fullName>
            </value>
            <value>
                <fullName>standard:report</fullName>
            </value>
            <value>
                <fullName>standard:record_create</fullName>
            </value>
            <value>
                <fullName>standard:photo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>