force-app/main/default/objects/Checklist_Section__c/fields/Parent_Section__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Section</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Checklist_Section__c.Checklist__c</field>
            <operation>equals</operation>
            <valueField>$Source.Checklist__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Checklist_Section__c</referenceTo>
    <relationshipLabel>Checklist Sections</relationshipLabel>
    <relationshipName>Checklist_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>