force-app/main/default/objects/Checklist_Section__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>