force-app/main/default/objects/Checklist_Section__c/fields/Section_Notes__c.field-meta.xml
<CustomField>
    <fullName>Section_Notes__c</fullName>
    <label>Section Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>