force-app/main/default/objects/Checklist_Section__c/fields/Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Section_Type__c</fullName>
    <label>Section Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Select</fullName>
            </value>
            <value>
                <fullName>Multi Select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>