force-app/main/default/objects/Checklist_Section__c/fields/Submit_By_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Submit_By_Attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit By Attorney</label>
    <type>Checkbox</type>
</CustomField>