force-app/main/default/objects/Checklist_Section__c/fields/Submit_By_Double_Checker__c.field-meta.xml
<CustomField>
    <fullName>Submit_By_Double_Checker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit By Double Checker</label>
    <type>Checkbox</type>
</CustomField>